Added email verification.
